# po-merge

./: .gitattributes  .gitignore  README.md  pyproject.toml  regenerate_expected.py
.github/workflows/: po-merge-bot.yml  test.yml
locale/sv/LC_MESSAGES/: django.po
src/django_po_merge/: __init__.py  cli.py  driver.py  merger.py  parser.py
src/po_merge/: cli.py  driver.py  merger.py  parser.py
tests/: git_helpers.py  test_integration_merge.py  test_merger.py
tests/fixtures/: base.po  expected.po  ours.po  theirs.po
tests/fixtures/expected/: strategy_none.po  strategy_ours.po  strategy_ours_no_prefer_fuzzy.po  strategy_ours_skip_validation.po  strategy_theirs.po
