[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-po-merge"
version = "0.1.0"
description = "Git merge driver for Django .po translation files"
requires-python = ">=3.12"
dependencies = [
    "polib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
