[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "po-merge"
version = "0.1.0"
description = "Git merge driver for .po translation files"
requires-python = ">=3.12"
dependencies = [
    "polib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
po-merge = "po_merge.cli:main"
po-merge-driver = "po_merge.driver:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
